@@ -12,9 +12,9 @@ describe 'named::caching' do
           it { is_expected.to create_file('/etc/named.conf').with(:target => '/var/named/chroot/etc/named.conf')}
           it { is_expected.to create_class('named::install').with(:chroot => true)}
           it { is_expected.to create_class('named::service').with(:chroot => true)}
-          it { is_expected.to create_simpcat_build('named_caching').with(:target => '/var/named/chroot/etc/named_caching.forwarders')}
-          it { is_expected.to create_simpcat_fragment('named_caching+header')}
-          it { is_expected.to create_simpcat_fragment('named_caching+footer')}
+          it { is_expected.to create_concat('named_caching').with(:path => '/var/named/chroot/etc/named_caching.forwarders')}
+          it { is_expected.to create_concat_fragment('named_caching+header')}
+          it { is_expected.to create_concat_fragment('named_caching+footer')}
           it { is_expected.to create_file('/var/named/chroot/etc/named.rfc1912.zones')}
           it { is_expected.to create_file('/var/named/chroot/var/named/data')}
           it { is_expected.to create_file('/var/named/chroot/var/named/localdomain.zone')}
@@ -24,7 +24,6 @@ describe 'named::caching' do
           it { is_expected.to create_file('/var/named/chroot/var/named/named.local')}
           it { is_expected.to create_file('/var/named/chroot/var/named/named.zero')}
           it { is_expected.to create_file('/var/named/chroot/etc/named.conf')}
-          it { is_expected.to create_file('/var/named/chroot/etc/named_caching.forwarders')}
         end
 
         context 'with non_chroot' do
@@ -32,11 +31,11 @@ describe 'named::caching' do
 
           it { is_expected.to_not create_file_line('bind_chroot') }
           it { is_expected.to_not create_file('/etc/named.conf').with(:target => '/var/named/chroot/etc/named.conf')}
+          it { is_expected.to create_concat('named_caching').with(:path => '/etc/named_caching.forwarders')}
           it { is_expected.to create_class('named::install').with(:chroot => false)}
           it { is_expected.to create_class('named::service').with(:chroot => false)}
-          it { is_expected.to create_simpcat_build('named_caching').with(:target => '/etc/named_caching.forwarders')}
-          it { is_expected.to create_simpcat_fragment('named_caching+header')}
-          it { is_expected.to create_simpcat_fragment('named_caching+footer')}
+          it { is_expected.to create_concat_fragment('named_caching+header')}
+          it { is_expected.to create_concat_fragment('named_caching+footer')}
           it { is_expected.to create_file('/etc/named.rfc1912.zones')}
           it { is_expected.to create_file('/var/named/data')}
           it { is_expected.to create_file('/var/named/localdomain.zone')}
@@ -46,7 +45,6 @@ describe 'named::caching' do
           it { is_expected.to create_file('/var/named/named.local')}
           it { is_expected.to create_file('/var/named/named.zero')}
           it { is_expected.to create_file('/etc/named.conf')}
-          it { is_expected.to create_file('/etc/named_caching.forwarders')}
         end
 
         context 'when trying to include ::named' do
